<resources>
    <string name="app_name">PNY ID Genrator</string>
    <string name="student_name">Student Name</string>
    <string name="cnic">CNIC</string>
    <string name="batch">Batch #</string>
    <string name="address">Adress</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="start_date">Start Date</string>
    <string name="contact_no">Contact No</string>
    <string name="for_pny"> ___________________ \n PNY Trainings </string>
    <string name="for_ffc"> ___________________ \n FCC </string>
    <string name="adress_pny">Address: Office # 9, Level# 10, Arfa Software Technology Park Ferozpur Road 54000 Lahore, Pakistan</string>
</resources>
