<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pny.com.pnyidgenrator.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/toolBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="PNY Trainings Id Genrator"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save"
            android:id="@+id/save"
            android:textColor="#fff"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
        </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/parentLayour"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_height="100dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/logo"
                android:id="@+id/pnyLogo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/studentId"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_weight="3"
                    android:text="PNY-123567"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    android:id="@+id/ppimage"
                    android:src="@android:drawable/ic_menu_camera" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_name"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:maxLength="60"
                        android:id="@+id/studentName"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cnic"
                        android:textColor="#000"
                        android:paddingLeft="10dp"
                        android:inputType="number"
                        android:maxLength="13"
                        android:id="@+id/CNIC"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/courseName">

                    </Spinner>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/batch"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:maxLength="60"
                        android:id="@+id/batchNum"/>

                    <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_no"
                    android:inputType="number"
                    android:textColor="#000"
                    android:paddingLeft="10dp"
                    android:maxLength="11"
                    android:id="@+id/contactNo"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Bike/Car Num"
                        android:inputType="text"
                        android:textColor="#000"
                        android:paddingLeft="10dp"
                        android:maxLength="60"
                        android:id="@+id/vehicleNum"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textColor="#000"
                        android:paddingLeft="10dp"
                        android:maxLength="60"
                        android:id="@+id/address"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date"
                        android:paddingLeft="10dp"
                        android:inputType="text"
                        android:textColor="#000"
                        android:maxLength="60"
                        android:id="@+id/startDate"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiry_date"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:maxLength="60"
                        android:inputType="text"
                        android:id="@+id/expiryDate"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="#000"
                        android:layout_marginLeft="10dp"
                        android:text="@string/for_pny"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="#000"
                        android:text="@string/for_ffc"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:text="@string/adress_pny">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="Contact # 0321 9533335">
                </TextView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
